041_reverse_str/grade.txt
Grading at 09/21/2021:16:30:21.439396
For commit ID b4064f27456920e00de898a1a38037f35c6654b4
Grading at Tue Sep 21 12:30:21 EDT 2021
Attempting to compile  reverse.c
reverse.c: In function ‘reverse’:
reverse.c:7:29: error: expected identifier before ‘(’ token
   if (!(str[0] == '\n')) && (str != NULL) {
                             ^
The code did not compile!

Overall Grade: F
